# corpus-cluster

./: .gitignore  CHECKPOINT.md  CHECKPOINT2.md  README.md  SHARE.md  benchmark.py  benchmark_scaling.py  cluster_descriptions.py  dashboard.py  download_data.py  generate_plots.py  pyproject.toml  report.md  worker_scaling_benchmark.py
algorithms/: __init__.py  faiss_kmeans.py  sklearn_kmeans.py  torch_naive.py  torch_optimized.py
results/: baseline_results.json  cluster_descriptions.json  scaling_results.json  worker_scaling.json
results/benchmarks/: faiss_cpu_vs_k_13m.json  faiss_gpu_vs_k.json  naive_broadcast_vs_n.json  naive_vs_optimized_vs_n.json  torch_optimized_vs_k_13m.json
results/feature_labels/: feature_labels_cls_1M.csv  feature_labels_cls_5.1M.csv  feature_labels_patch_5.1M.csv
scripts/: autointerp_common.py  benchmark.py  build_shard_index.py  embed_imagenet21k.py  label_features.py  make_plots.py  sae.py  test_algorithms.py  train_sae.py
